<resources>
    <string name="app_name">GoogleBooksApp</string>
    <string name="title">Title</string>
    <string name="moreSearchOption">More search options</string>
    <string name="apiKey">AIzaSyCMj1cbJSExeSDxsUeWu_aFmX20wdCk9DI</string>
    <string name="author">Author</string>
    <string name="publisher">Publisher</string>
    <string name="anyPrintType">Any</string>
    <string name="booksPrintType">Books</string>
    <string name="magazinesPrintType">Magazines</string>
    <string name="searchAction">Search</string>
    <string name="category">Category</string>
    <string name="queryPrompt">Enter your query</string>
    <string name="noResultsQuery">No results, try something different</string>
    <string name="endOfPagination">End of pagination reached</string>
    <string name="networkError">Network error occurred</string>
    <string name="clearAction">Clear Query</string>
    <string name="volumeImage">Volume image</string>
    <string name="goToGoogleBooks">Go to Google Books</string>
    <string name="downloadPdf">Download PDF</string>
    <string name="language">Language</string>
    <string name="categories">Categories</string>
</resources>