<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/authorEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="13"
        android:hint="@string/author"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/publisherEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="13"
        android:hint="@string/publisher"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:minHeight="48dp" />

    <MultiAutoCompleteTextView
        android:id="@+id/categoryEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="13"
        android:hint="@string/category"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:minHeight="48dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/printTypeRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/anyRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/anyPrintType" />

            <RadioButton
                android:id="@+id/booksRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/booksPrintType" />

            <RadioButton
                android:id="@+id/magazinesRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/magazinesPrintType" />
        </RadioGroup>

        <ImageButton
            android:id="@+id/clearButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/defaultMargins"
            android:contentDescription="@string/clearAction"
            android:minHeight="48dp"
            android:src="@drawable/clear" />

    </LinearLayout>

</LinearLayout>