<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ListActivity">

    <EditText
        android:id="@+id/authorEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:hint="@string/author"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/publisherEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:hint="@string/publisher"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:minHeight="48dp" />

    <MultiAutoCompleteTextView
        android:id="@+id/categoryEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:hint="@string/publisher"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:minHeight="48dp" />

    <RadioGroup
        android:id="@+id/printTypeRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/anyRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/anyPrintType" />

        <RadioButton
            android:id="@+id/booksRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/booksPrintType" />

        <RadioButton
            android:id="@+id/magazinesRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/magazinesPrintType" />
    </RadioGroup>

</LinearLayout>