<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".activity.ListActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:layout_marginHorizontal="@dimen/marginMedium"
        android:orientation="vertical">

        <include
            android:id="@+id/titleEditText"
            layout="@layout/card_edit_text"/>

        <include
            android:id="@+id/detailedSearch"
            layout="@layout/detailed_search"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/moreButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/defaultMargins"
            android:background="@android:color/transparent"
            android:contentDescription="@string/moreSearchOption"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:src="@drawable/down" />

    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/bigCardAndDetailsColor"
        android:layout_marginHorizontal="@dimen/marginMedium"
        android:animateLayoutChanges="true"
        android:layout_weight="100"
        app:cardCornerRadius="@dimen/bigCornerRadius">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true">

            <TextView
                android:id="@+id/search_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textSize="24sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:visibility="gone"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
        </FrameLayout>
    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/searchButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/defaultMargins"
            android:background="@android:color/transparent"
            android:contentDescription="@string/searchAction"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:src="@drawable/search" />

        <ImageButton
            android:id="@+id/clearButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/defaultMargins"
            android:background="@android:color/transparent"
            android:contentDescription="@string/clearAction"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:src="@drawable/clear" />

        <TextView
            android:id="@+id/endOfPagingOrErrorTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/defaultMargins"
            android:textColor="@color/uiElementsStrokeAndTextColor"
            android:textSize="24sp" />

    </LinearLayout>

</LinearLayout>